fix: align scoreboards and move Refactored HTML nesting to ensure Home and Guest sections are siblings within the flex container. Updated CSS to fix scoreboard alignment, corrected h1 line-height, and styled buttons as a vertical stack below the display.

--- a/index.css
+++ b/index.css
@@ -8,9 +8,24 @@ body {
 }
 
 .container {
-    display: flex;
-    justify-content: space-around;
+    background-color:#1c3653;
+    width: 500px;
+    margin: 50px auto;
+    height:450px;
+    padding: 20px;
     text-align:center;
+    border-radius:10px;
+    box-shadow:0px 0px 10px#1a3552;
+}
+
+.scoreboard-container {
+    display:flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:flex-start;
+    gap:50px;
+    margin-bottom:30px;
+
 }
 
 .container h3{ 
@@ -21,30 +36,45 @@ body {
 }
 .scoreboard {
     background-color: black;
-    width:130px;
+    width:150px;
     height:120px;
-    margin:auto;
+    margin:0 auto 20px;
     color: red;
-    padding: 1px;
+    padding: 20px 10px;
     border-radius:10px;
     font-family:"timer";
     box-shadow: 0px 0px 20px #415a77;
+    display:flex;
+    justify-content:center;
+    align-items: center;
 }
 
 .scoreboard h1 {
-  font-size:50px;
-  text-shadow: 0px 0px 5px red;
+    margin:0;
+    font-size:80px;
+    line-height:normal;
+    text-shadow: 0px 0px 10px red;
 }
 
-button {
-    margin-top: 15px;
-    padding: 6px;
-    border:2px solid white;
-    background-color:#0d1b2a;
-    font-family:"timer";
-    color:white;
-    
+.button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+button.addition {
+    margin-top: 0px;
+    padding: 10px;
+    width: 50px;
+    border: 2px solid white;
+    background-color: #0d1b2a;
+    font-family: "timer";
+    color: white;
+    cursor: pointer;
+}
 
+button.addition:hover {
+    background-color: #415a77;
 }
 
 .newgame {
@@ -52,4 +82,41 @@ button {
     margin: 1px auto;
     width:80px;
     box-shadow:0px 0px 5px #415a77;
+    background-color: #0d1b2a;
+    font-family: "timer";
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    width: 100px;
+    border:2px solid white;
+}
+
+#footer {
+    margin-top: 30px; 
+    font-size: 14px;
+    text-align: center;
+}
+
+.github-link {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-top: 5px;
+    gap:8px;
+}
+
+#footer p {
+    color: #0d1b2a;
+    margin-bottom: 5px;
+}
+
+#footer a {
+    color: 0d1b2a;
+    text-decoration: none;
+    font-weight: bold;
+    border-bottom: 1px solid #0d1b2a;
+}
+
+#footer a:hover {
+    color: #04090f;
 }
